--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "apollo-server": "^3.10.1",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1"
   },
   "devDependencies": {
