--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,17 @@
   },
   "homepage": "https://github.com/myzozoz/fso22-part8-graphql#readme",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.12",
     "apollo-server": "^3.10.1",
+    "apollo-server-core": "^3.11.1",
+    "apollo-server-express": "^3.11.1",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.11.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "ws": "^8.11.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
